# shu-ml-session406-ufo-render

./: .dockerignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
app/: main.py  model.py  ufo-centroids.json  ufo-model.json
scripts/: train_model.py
static/: index.html
tests/: test_api.py
