[project]
name = "shu-ml-session406-ufo-render"
version = "0.1.0"
description = "Session 406 UFO FastAPI backend deployed on Render."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]
